--- a/package.json
+++ b/package.json
@@ -9,16 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.1",
+    "@mui/lab": "5.0.0-alpha.157",
+    "@mui/material": "^5.15.0",
+    "@prisma/client": "5.7.1",
+    "@types/uuid": "^9.0.7",
+    "instagram-private-api": "^1.45.3",
+    "next": "14.0.4",
+    "next-safe-action": "^5.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "reflect-metadata": "^0.2.1",
+    "tsyringe": "^4.8.0",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4",
+    "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "prisma": "^5.7.1",
+    "typescript": "^5"
   }
 }
