--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "reflect-metadata": "^0.2.1",
+    "sharp": "^0.33.1",
     "tsyringe": "^4.8.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
