Update form factor labels in manifest.json
This commit changes the form factor labels for screenshots in the manifest file. Previously "desktop" and "mobile", these labels are now more accurately described as "wide" and "narrow", respectively.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -33,13 +33,13 @@
       "src": "screenshot-desktop.png",
       "sizes": "2426x1546",
       "type": "image/png",
-      "form_factor": "desktop"
+      "form_factor": "wide"
     },
     {
       "src": "screenshot-mobile.png",
       "sizes": "304x675",
       "type": "image/png",
-      "form_factor": "mobile"
+      "form_factor": "narrow"
     }
   ]
 }
