Add pnpm supported architectures in package.json
The pnpm configurations have been updated to include supported architectures in the package.json file. This addition specifies the operating systems and CPU architectures that the project supports, facilitating a more organized and efficient development environment.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "pnpm": {
+    "supportedArchitectures": {
+      "os": ["darwin", "linux"],
+      "cpu": ["x64", "arm64"]
+    }
+  },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.0.0",
     "@emotion/cache": "^11.11.0",
