Expand support for pnpm architectures in package.json
The package.json has been updated to broaden the range of supported architectures under the pnpm configuration. Specifically, respective "os", "cpu" and "libc" fields now include a "current" option. This inclusion seeks to enhance the versatility of the project across different platforms.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
   },
   "pnpm": {
     "supportedArchitectures": {
-      "os": ["darwin", "linux"],
-      "cpu": ["x64", "arm64"]
+      "os": [
+        "darwin",
+        "linux",
+        "current"
+      ],
+      "cpu": [
+        "x64",
+        "arm64",
+        "current"
+      ],
+      "libc": [
+        "musl",
+        "current"
+      ]
     }
   },
   "dependencies": {
