Update supported architectures in package.json
The "os" field in the package.json file has been altered to support "linuxmusl" instead of "linux". The "libc" field has been removed completely, reducing the specification constraints. These modifications are targeted to accommodate a more diverse set of infrastructure setups and build environments.

--- a/package.json
+++ b/package.json
@@ -12,16 +12,12 @@
     "supportedArchitectures": {
       "os": [
         "darwin",
-        "linux",
+        "linuxmusl",
         "current"
       ],
       "cpu": [
         "x64",
         "arm64",
-        "current"
-      ],
-      "libc": [
-        "musl",
         "current"
       ]
     }
